Add Token Variable and Fetch Modules

--- a/action.yml
+++ b/action.yml
@@ -5,9 +5,16 @@ inputs:
     description: 'name of the release to delete'
     required: true
     default: 'example-release'
+  token:  # github token should be pulled from a secret
+    description: 'github token should be pulled from a secret'
+    required: true
+    default: ''
 outputs:
   time: # id of output
     description: 'The time we greeted you'
 runs:
   using: 'node12'
   main: 'index.js'
+
+
+  token: ${{ secrets.GITHUB_TOKEN }}
